--- a/style.css
+++ b/style.css
@@ -1,7 +1,53 @@
-header{
-    background-color: #EFb684;
-    color: white;
+body {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  color: #333;
+  margin: 0;
+  padding: 0;
 }
-.cabecalho-imagem{
-  width: min-content 20%;
+
+header {
+  background-color: #e67e22;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 36px;
+  margin: 0;
+}
+
+h2 {
+  font-size: 24px;
+  margin: 0;
+}
+
+section {
+  padding: 20px;
+}
+
+h3 {
+  font-size: 24px;
+  margin: 0 0 20px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  margin: 20px 0;
+}
+
+h4 {
+  font-size: 20px;
+  margin: 0 0 10px;
+}
+
+p {
+  margin: 0;
+  line-height: 1.5;
 }
